@@ -525,3 +525,10 @@ Sun Feb 21 09:34:09 CST 2016
 - [M] arch/x86/include/asm/current.h		[D] using esp to obtain task
 - [M] arch/x86/include/asm/thread_info.h
 - [M] arch/x86/include/asm/processor.h		[D] finally, pt_regs, thread_info, task ~~~~
+
+
+Mon Feb 22 11:04:52 CST 2016
+- [+] include/asm-generic/switch_to.h
+- [+] arch/x86/include/asm/switch_to.h
+- [M] arch/x86/kernel/process_32.c
+- [M] arch/x86/kernel/process_64.c
